fix tailing comma

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "TaNteE\\PhpUtilities\\": "src",
+            "TaNteE\\PhpUtilities\\": "src"
         }
     },
     "autoload-dev": {
